--- a/index.html
+++ b/index.html
@@ -40,19 +40,18 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Yang
+                        <span class="text-primary">Chen</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        Claverton Down, Department of Mechanical Engineering, University of Bath ·
+                        <a href="mailto:name@email.com">yc2634@bath.ac.uk</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">As a passionate experimentalist and skilled modeller, I specialize in lightweight composite materials. My research intricately interweaves sophisticated experimentation with large-scale simulations to unravel the interconnected relationships between process, microstructure, and properties across multiple length scales. With a robust background in advanced composite structures, I've amassed extensive experience in applications for the aerospace and energy sectors.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <!--a class="social-icon" href="#!"><i class="fab fa-github"></i></a-->
+                        <!--a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a-->
                     </div>
                 </div>
             </section>
@@ -63,35 +62,35 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Lecturer (Assistant Professor)</h3>
+                            <div class="subheading mb-3">Depatment of Mechanical Engineering, University of Bath</div>
+                            <p></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sep 2023 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Research Fellow</h3>
+                            <div class="subheading mb-3">Depatment of Mechanical Engineering, University of Bath</div>
+                            <p></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Mar 2022 - Aug 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Research Associate</h3>
+                            <div class="subheading mb-3">Depatment of Mechanical Engineering, University of Bath</div>
+                            <p></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Feb 2021 - Feb 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <h3 class="mb-0">Research Associate</h3>
+                            <div class="subheading mb-3">Depatment of Mechanical Engineering, University of Bath</div>
+                            <p></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Nov 2018 - Jan 2022</span></div>
                     </div>
                 </div>
             </section>
@@ -102,25 +101,33 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">University of Paris-Est</h3>
+                            <div class="subheading mb-3">PhD</div>
+                            <div>Materials and Mechanics</div>
+                            <p></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2014 - 2017</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Ecole Normale Superieure de Cachan</h3>
+                            <div class="subheading mb-3"></div>
+                            <p></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2013 - 2014</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">University of Lille 1 (France) & Hohai University (Nanjing, China)</h3>
+                            <div class="subheading mb-3"></div>
+                            <p></p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2008 - 2012</span></div>
                     </div>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Skills-->
+            <!-- Skills>
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
@@ -159,21 +166,27 @@
                         </li>
                     </ul>
                 </div>
-            </section>
+            </section-->
             <hr class="m-0" />
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Yang's innovative research primarily centers around the development of advanced techniques for data-rich full-field experiments and numerical simulations in heterogeneous materials and structures. With a focus on fibre-reinforced composites, his findings hold significant implications in sectors like aerospace, nuclear energy, and transportation. His key areas of expertise include:</p>
+                    <ul>
+                        <li>FFT solvers for micromechanics</li> 
+                        <li>X-ray computed tomography</li>
+                        <li>Nonlinear mechanical modelling</li>
+                        <li>Fluid flow in porous media</li>
+                        <li>Carbon fibre and ceramic matrix composites</li>
+                        <li>Image-processing and image-based simulation</li>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
+            <!-- Awards>
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Awards</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
@@ -215,10 +228,10 @@
                         </li>
                     </ul>
                 </div>
-            </section>
+            </section-->
         </div>
         <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src=></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
